src/objects/Licenses__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Code__c</fullName>
        <label>Budget Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Split__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Portion of the license cost being paid from this budget code for this user (between 0 and 1).</description>
        <label>Budget Split</label>
        <precision>3</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Title__c</fullName>
        <label>Budget Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY27</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Donated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter External</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>START</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Yearly_Cost__c</fullName>
        <formula>Yearly_License_Cost_1__c + Yearly_Shared_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Yearly Cost</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yearly_License_Cost_1__c</fullName>
        <formula>Budget_Split__c * IF( TEXT(License_Type__c) = &apos;Standard Donated&apos;, 0,360)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly License Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Shared_Cost__c</fullName>
        <description>This is the total yearly costs for everything except licenses, divided by 140</description>
        <formula>Budget_Split__c * 24.84</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Shared Cost</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LI-{00000}</displayFormat>
        <label>Licenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>